--- a/dashboard.html
+++ b/dashboard.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work!</title>
-
+	<title>Inicio</title>
 </head>
 <body>
-
-	<div id="root"></div>
-	<h1>Inicio de sesion</h1>
-  <input type="email" name="email" id="email" value="email" />
-  <input type="password" name="password" id="password" value="contraseña" />
-	<button id="login">Inicia con Google</button>
-  <button id="singup">Registrar </button>
-  <button id="log"> Login</button>
-  
-  
+<button id="logout"> Logout</button>
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -34,8 +24,6 @@
   };
   firebase.initializeApp(config);
 </script>
-
-<script src="app.js"></script>
-<script src="registro.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
